--- a/public/style.css
+++ b/public/style.css
@@ -63,3 +63,17 @@ textarea {
     background: #8f8be8;
     color: #fff;
 }
+
+.outgoing{
+    background: #e9eafd;
+    color: #787986;
+    margin-left: auto;
+}
+
+.message h4 {
+    position: absolute;
+    top: -20px;
+    left: 0;
+    color: #333;
+    font-size: 14px;
+}
